--- a/client/address.html
+++ b/client/address.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
             <div class="form-horizontal">
                 <div class="form-group {{#if afFieldIsInvalid name='address.country'}}has-error{{/if}}" data-required="true">
-                    <label class="col-sm-3">{{afFieldLabelText name="address.country"}}</label>
+                    <label class="control-label col-sm-3">{{afFieldLabelText name="address.country"}}</label>
                     <div class="col-sm-9 dropdown-country dropdown">
                         <div class="input-group" data-toggle="dropdown">
                             <input value="Deutschland" class="form-control address-country-search" autocomplete="off" />
@@ -19,14 +19,14 @@
                                 </li>
                             {{/each}}
                         </ul>
-                        {{> afFieldInput name="address.country" class="form-control address-country" type="hidden"}}
+                        {{> afFieldInput name="address.country" type="hidden"}}
                     </div>
                 </div>
                 <div class="form-group {{#if afFieldIsInvalid name='address.city'}}has-error{{/if}}" data-required="true">
-                    <label class="col-sm-3">{{afFieldLabelText name="address.city"}}</label>
+                    <label class="control-label col-sm-3">{{afFieldLabelText name="address.city"}}</label>
                     <div class="col-sm-9 dropdown-city dropdown">
                         <div class="input-group" data-toggle="dropdown">
-                            {{> afFieldInput name="address.city" class="form-control address-city" autocomplete="off"}}
+                            {{> afFieldInput name="address.city" autocomplete="off"}}
                         </div>
                         <ul class="dropdown-menu">
                             {{#each citySearchResults}}
@@ -40,13 +40,13 @@
                     </div>
                 </div>
                 <div class="form-group {{#if afFieldIsInvalid name='address.postcode'}}has-error{{/if}}" data-required="false">
-                    <label class="col-sm-3">{{afFieldLabelText name="address.postcode"}}</label>
+                    <label class="control-label col-sm-3">{{afFieldLabelText name="address.postcode"}}</label>
                     <div class="col-sm-4">
                     {{> afFieldInput name="address.postcode" size="5" class="form-control" }}
                     </div>
                 </div>
                 <div class="form-group {{#if afFieldIsInvalid name='address.street'}}has-error{{/if}}" data-required="false">
-                    <label class="col-sm-3">{{afFieldLabelText name="address.street"}}</label>
+                    <label class="control-label col-sm-3">{{afFieldLabelText name="address.street"}}</label>
                     <div class="col-sm-9 dropdown-street dropdown">
                         <div class="input-group" data-toggle="dropdown">
                             {{> afFieldInput name="address.street" class="form-control address-street" autocomplete="off"}}
@@ -73,13 +73,4 @@
         </div>
     </div>
     <span class="help-block">{{{afFieldMessage name="address.country"}}}</span>
-</template>
-<template name="afFormGroup_address">
-  <div class="form-group {{#if afFieldIsInvalid name=this.name}}has-error{{/if}}" data-required={{required}}>
-    {{#unless skipLabel}}
-    <label {{bsFieldLabelAtts}}>{{#if this.labelText}}{{this.labelText}}{{else}}{{afFieldLabelText name=this.name}}{{/if}}</label>
-    {{/unless}}
-    {{> afFieldInput this.afFieldInputAtts}}
-    <span class="help-block">{{{afFieldMessage name=this.name}}}</span>
-  </div>
 </template>
