--- a/client/practice.html
+++ b/client/practice.html
@@ -82,7 +82,7 @@
                             {{> afQuickField name='duration' }}
                         </div>
                         <div class="col-xs-12">
-                            {{> afObjectField name='address' template="address"}}
+                            {{> afQuickField name='address' template="ultisiteAddress"}}
                         </div>
                         <div class="col-xs-4">
                             {{> afQuickField name='contact' }}
