--- a/client/tournament.html
+++ b/client/tournament.html
@@ -7,77 +7,28 @@
     <div class="modal fade" id="tournamentUpdateDialog">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span class="fa fa-close"></span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">Turnierdaten editieren</h4>
-                </div>
-                <div class="modal-body">
-                {{#if isVisible}}
-                    {{#autoForm schema=tournamentSchema collection="UltiSite.Tournaments" doc=this id="tournamentUpdateForm" type="update"}}
-                      <fieldset class="row">
-                        <div class="col-xs-7">
-                            {{> afQuickField name='name'}}
-                        </div>
-                        <div class="col-xs-5">
-                            {{> afQuickField name='category' }}
-                        </div>
-                        <div class="col-xs-8">
-                            {{> afQuickField name='date' data-date-format='dd.mm.yyyy' data-date-language='de-DE'}}
-                        </div>
-                        <div class="col-xs-4">
-                            {{> afQuickField name='numDays'}}
-                        </div>
-                        <div class="col-xs-12">
-                            {{> afQuickField name='address' template="address"}}
-                        </div>
-                        <div class="col-xs-12">
-                            {{> afQuickField name='surfaces' type='select-checkbox-inline'}}
-                        </div>
-                        <div class="col-xs-12">
-                            {{> afQuickField name='divisions' type='select-checkbox-inline'}}
-                        </div>
-                        <div class="col-xs-6">
-                            {{> afQuickField name='tournamentDirector'}}
-                        </div>
-                        <div class="col-xs-6">
-                            {{> afQuickField name='website'}}
-                        </div>
-                      </fieldset>
-                      <button type="submit" class="btn btn-primary">Speichern</button>
-                      {{/autoForm}}
-                    {{/if}}
-                </div>
-            </div>
-        </div>
-    </div>
-    {{/if}}
-</template>
-<template name="tournamentCreate">
-    {{#if currentUser}}
-    <div class="modal fade" id="tournamentCreateDialog">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span class="fa fa-close"></span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">Turnier eintragen</h4>
-                    Nach dem Eintragen des Turniers müssen diesem noch ein Team hinzugefügt werden, damit sich Spieler eintragen können.
-                </div>
-                {{#if isVisible}}
-                    {{#autoForm schema=tournamentSchema collection="UltiSite.Tournaments" doc=prefill id="tournamentCreateForm" type="insert"}}
+                {{#autoForm schema=tournamentSchema collection="UltiSite.Tournaments" doc=this.tournament id="tournamentUpdateForm" type=this.type}}
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span class="fa fa-close"></span>
+                        </button>
+                        {{#if equals type "update"}}
+                            <h4 class="modal-title" id="myModalLabel">Turnierdaten editieren</h4>
+                        {{else}}
+                            <h4 class="modal-title" id="myModalLabel">Turnier eintragen</h4>
+                            Nach dem Eintragen des Turniers müssen diesem noch ein Team hinzugefügt werden, damit sich Spieler eintragen können.
+                        {{/if}}
+                    </div>
                     <div class="modal-body">
                         <fieldset class="row">
                             <div class="col-xs-7">
                                 {{> afQuickField name='name'}}
                             </div>
                             <div class="col-xs-5">
-                                {{> afQuickField name='category'}}
+                                {{> afQuickField name='category' }}
                             </div>
                             <div class="col-xs-8">
-                                {{> afQuickField name='date' value=prefill.date}}
+                                {{> afQuickField name='date' data-date-format='dd.mm.yyyy' data-date-language='de-DE'}}
                             </div>
                             <div class="col-xs-4">
                                 {{> afQuickField name='numDays'}}
@@ -100,27 +51,18 @@
                         </fieldset>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">Anlegen</button>
-                        <button type="button" data-dismiss="modal" aria-label="Close" class="btn btn-default">Abbrechen</button>
+                        <button type="submit" class="btn btn-primary">Speichern</button>
                     </div>
-                    {{/autoForm}}
-                {{else}}
-                    <div class="modal-body">
-                        {{>Loading}}
-                    </div>
-                {{/if}}
+                {{/autoForm}}
             </div>
         </div>
     </div>
     {{/if}}
 </template>
 
+
 <template name="tournament">
     {{#with tournament}}
-        {{>tournamentUpdate this}}
-        {{>teamUpdate tournamentId=this._id}}
-        {{>participateDialog tournamentId=this._id teams=this.teams}}
-        {{>teamHistoricView}}
         <div class="panel panel-default">
             <div class="panel-heading tournament-heading">
                 {{#if currentUser}}
@@ -128,11 +70,11 @@
                 {{! TODO: Mein mitspiel status button}}
 
                     <div>
-                        <button class="btn btn-{{#if teamObjects}}default{{else}}primary{{/if}}" title="Team anlegen" type="button" data-toggle="modal" data-target="#teamUpdateDialog">
+                        <button class="btn btn-{{#if teamObjects}}default{{else}}primary{{/if}} action-add-team" title="Team anlegen" type="button">
                             <span class="fa fa-group"></span><sub><span class="fa fa-plus"></span></sub>
                             <span class=""> Team anlegen</span>
                         </button>
-                        <button class="btn btn-default" title="Turnier editieren" type="button" data-toggle="modal" data-target="#tournamentUpdateDialog">
+                        <button class="btn btn-default action-edit-tournament" title="Turnier editieren" type="button">
                             <span class="fa fa-edit"></span><span class=""> editieren</span>
                         </button>
                         {{#unless teamObjects.length}}
@@ -149,12 +91,12 @@
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right" role="menu">
                         <li>
-                            <a title="Team anlegen" type="button" data-toggle="modal" href="#" data-target="#teamUpdateDialog">
+                            <a title="Team anlegen" class="action-add-team">
                                 <span class="fa fa-group"></span><sub><span class="fa fa-plus"></span></sub> Team anlegen
                             </a>
                         </li>
                         <li>
-                            <a title="Turnier editieren" type="button" data-toggle="modal" href="#" data-target="#tournamentUpdateDialog">
+                            <a title="Turnier editieren" class="action-edit-tournament" href="#">
                                 <span class="fa fa-edit"></span> Editieren
                             </a>
                         </li>
@@ -187,11 +129,12 @@
                             {{#if equals numDays 1}}Ein Tag{{else}}{{numDays}} Tage{{/if}}
                         </div>
                         <div class="tournament-value">
-                            <span class="fa fa-list fa-fw"></span>
-                            Divisionen - Untergrund
-                            {{#each divisions}}
-                                <div class="small">{{division}} - {{surface}} {{#with numPlayers}} - {{this}} Spieler{{/with}}</div>
-                            {{/each}}
+                            <span class="fa fa-group fa-fw"></span>
+                            {{joinNice divisions}}
+                        </div>
+                        <div class="tournament-value">
+                            <span class="fa fa-window-minimize fa-fw"></span>
+                            {{joinNice surfaces}}
                         </div>
                         {{#if tournamentBodyVisible}}
                             {{#if contact.detail}}
@@ -338,11 +281,11 @@
         {{else}}
             {{#if currentUser}}
                 {{#if teamObjects.length}}
-                    <button class="visible-xs visible-sm btn btn-primary btn-floating" title="Mitspielen" type="button" data-toggle="modal" data-target="#participateDialog">
+                    <button class="visible-xs visible-sm btn btn-primary btn-floating action-participate" title="Mitspielen" type="button">
                         <span class="fa fa-plus fa-lg"></span>
                     </button>
                 {{else}}            
-                    <button class="visible-xs visible-sm btn btn-default btn-floating" title="Team anlegen" type="button" data-toggle="modal" data-target="#teamUpdateDialog">
+                    <button class="visible-xs visible-sm btn btn-default btn-floating action-add-team" title="Team anlegen" type="button">
                         <span class="fa fa-group"></span><sub><span class="fa fa-plus"></span></sub>
                     </button>
                 {{/if}}
