--- a/client/blog.html
+++ b/client/blog.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="form-group">
                         <label>Inhalt</label>
-                        {{#wysiwygEditor light=true startEnabled=true}}{{{blog.content}}}{{/wysiwygEditor}}
+                        {{>ultisiteWysiwyg light=true value=blog.content source=blog}}
                     </div>
                     <div class="form-group">
                         <label>Bild</label>
