--- a/imports/client/tournaments/team.html
+++ b/imports/client/tournaments/team.html
@@ -139,7 +139,7 @@
 
                 <div class="col-xs-12 col-sm-6">
                     <b>Anmerkungen:</b> 
-                    {{#if isResponsible}}
+                    {{#if isMyTeam}}
                         <button class="btn btn-link action-edit-remarks">
                             <span class="fa fa-edit"></span>
                         </button>
